--- a/src/app/moje-rezervacije/moje-rezervacije.page.scss
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.scss
@@ -1,3 +1,6 @@
+ion-content.background{
+    --background: url('../../assets/picture/plava-bela.jpg') no-repeat left 50%/cover;
+}
 .rb{
     max-width: 30px;
     min-width: 30px;
