--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,3 +1,6 @@
+ion-content.background{
+  --background: url('../../assets/picture/train3.jpg') no-repeat left 50%/cover;
+}
   .buttons-action{
     margin-left: 5px;
   }
@@ -22,6 +25,7 @@
     margin-right: 13px;
     font-size: small;
     font-family: 'Nunito',sans-serif;
+    height: 50px; 
   }
   ion-checkbox{
     background-color: #a04eff;
@@ -31,6 +35,7 @@
     --checkmark-color: white;
     --background-checked:#a04eff;
     --border-color:#a04eff;
+   
   }
   .line{
     border-bottom: 1px solid grey;
