--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -1,36 +1,43 @@
-.rb{
-    width: 2px;
+ion-content.background {
+  --background: url("../../assets/picture/plava-bela.jpg") no-repeat left 50% /
+    cover;
 }
-.linija{
-    width: 100px;
+.rb {
+  width: 2px;
 }
-
-.datumPolazak{
-    min-width: 80px;
-    text-align: right;
-}
-.datumDolazak{
-    min-width: 80px;
-    text-align: right;
-}
-.actionbutton{
-    min-width: 100px;
-    background-color:#999999;
-    color:#000000;
-    font-size: 20px;
-}
-.rb{
-    min-width: 50px;
-    max-width: 80px;
-    text-align: left;
-}
-.linija{
-    min-width: 5px;
-    max-width: 75px;
-    text-align: right;
-}
-.rezervisi{
-    right: 0px;
+.linija {
+  width: 100px;
 }
 
-
+.datumPolazak {
+  min-width: 80px;
+  text-align: right;
+}
+.datumDolazak {
+  min-width: 80px;
+  text-align: right;
+}
+.actionbutton {
+  min-width: 90px;
+  border-radius: 2px;
+  background-color: #008CBA;
+  position: unset;
+  color: #ffffff;
+  border-radius: 2px;
+  font-size: 20px;
+  height: 50px; 
+  
+}
+.rb {
+  min-width: 50px;
+  max-width: 80px;
+  text-align: left;
+}
+.linija {
+  min-width: 5px;
+  max-width: 75px;
+  text-align: right;
+}
+.rezervisi {
+  right: 0px;
+}
