--- a/src/app/moje-rezervacije/moje-rezervacije.page.html
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.html
@@ -2,15 +2,16 @@
   <ion-toolbar>
       <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <img src="https://img.icons8.com/clouds/80/000000/ticket.png"/>
       </ion-buttons>
-    <ion-title>
+      <ion-title style="color: #3171e0	; font-size: 25px;">
       Моје резервације
     </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-router-outlet id="main"></ion-router-outlet>
 
-<ion-content>
+<ion-content class="background">
   <ion-grid> 
      <ion-card class="card">
       <ion-row>
