--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -2,9 +2,10 @@
   <ion-toolbar>
       <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
+      <img src="https://img.icons8.com/clouds/80/ffffff/home-page.png"/>
       </ion-buttons>
     <ion-title>
-      Железнице Србије
+     Направи налог
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,11 +13,11 @@
   <div class="ion-padding">
     <div class="button-action">
       <ion-button fill="clear" color="dark" size="small" routerLink="/home" routerDirection="root">
-        <ion-icon name="log-in"></ion-icon>
+        <img src="https://img.icons8.com/bubbles/30/000000/user.png"/>
         <b><p class="signin-text">Пријави се</p></b>
       </ion-button>
       <ion-button fill="clear" color="dark" size="small">
-        <ion-icon name="person-add"></ion-icon>
+        <img src="https://img.icons8.com/bubbles/35/000000/add-user-male.png"/>
         <b><p class="signup-text">Направи налог</p></b>
       </ion-button>
     </div>
@@ -26,37 +27,49 @@
     <form #a="ngForm" (ngSubmit)="register(a)">
       <div class="ion-padding">
         <ion-item class="red">
-          <ion-label position="floating">Емаил адреса</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/external-kiranshastry-lineal-color-kiranshastry/15/ffffff/external-email-advertising-kiranshastry-lineal-color-kiranshastry-1.png"/> 
+                  Емаил адреса</ion-label>
           <ion-input type="text"  ngModel name="email" required  ></ion-input>
         </ion-item>
         <hr>
         <ion-item class="red">
-          <ion-label position="floating">Корисничко име</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/fluency/15/ffffff/name.png"/>
+            Корисничко име</ion-label>
           <ion-input type="text"  ngModel name="username" required  ></ion-input>
         </ion-item>
         <hr>
         <ion-item class="red">
-          <ion-label position="floating">Име</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/fluency/15/ffffff/name.png"/>                
+                    Име</ion-label>
           <ion-input type="text"  ngModel name="firstname" required ></ion-input>
         </ion-item>
         <hr>
         <ion-item class="red">
-          <ion-label position="floating">Презиме</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/fluency/15/ffffff/name.png"/>  
+            Презиме</ion-label>
           <ion-input type="text"  ngModel name="lastname" required  > </ion-input>
         </ion-item>
         <hr>
         <ion-item class="red">
-          <ion-label position="floating">Лозинка</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/office/15/000000/key.png"/>
+            Лозинка</ion-label>
           <ion-input type="password"  ngModel name="password" required > </ion-input>
         </ion-item>
         <hr>
         <ion-item class="red"> 
-          <ion-label position="floating">Понови лозинку</ion-label>
+          <ion-label position="floating">
+            <img src="https://img.icons8.com/office/15/000000/key.png"/>
+            Понови лозинку</ion-label>
           <ion-input type="password" ngModel name="repassword" required  ></ion-input>
         </ion-item>
       </div>
       <ion-button type="submit" class="actionbutton" expand="block" fill="clear" style="text-transform: none;">
-        <ion-icon name="person-add"></ion-icon>
+        <img src="https://img.icons8.com/clouds/60/000000/add-user-male.png"/>
         Направи налог</ion-button>
     </form>
   </div>
