Uklonjene nepotreben ikonice i dodat footer social media

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -139,10 +139,14 @@
         </ion-card>
       </ion-grid>
 </ion-content>
-<ion-footer>
+<ion-footer class="footer">
   <ion-toolbar>
-    <ion-title style="float: right;"> © Железнице Србије</ion-title>
-  </ion-toolbar>
+    <ion-item style="float: right;"> © Железнице Србије</ion-item>
+    <img src="https://img.icons8.com/fluency/50/000000/facebook.png"/>
+    <img src="https://img.icons8.com/color/50/000000/instagram-new--v1.png"/>
+    <img src="https://img.icons8.com/fluency/50/000000/twitter.png"/>
+    <img src="https://img.icons8.com/color/48/ffffff/linkedin.png"/> 
+   </ion-toolbar>
 </ion-footer>
 
 
