--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,7 +7,7 @@ ion-content.background{
 
 .signup-text{
   font-size: x-small;
-  color:#a8a8a8;
+  color:#ffffff;
   text-align: center;
   font-family: 'Nunito',sans-serif;
   text-transform: none;
