--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
     <ion-header>
       <ion-toolbar>
         <ion-title style="color: white">
-         
-          <img src="https://img.icons8.com/ios/50/ffffff/menu--v1.png"/>         
+          <img src="https://img.icons8.com/ios/50/ffffff/menu--v1.png" />
         </ion-title>
         <ion-button
           slot="end"
@@ -14,7 +13,7 @@
           [hidden]="ishidden"
           (click)="izlogujSe()"
         >
-        <img src="https://img.icons8.com/clouds/50/000000/exit.png"/>
+          <img src="https://img.icons8.com/clouds/50/000000/exit.png" />
           Одјава</ion-button
         >
       </ion-toolbar>
@@ -31,9 +30,13 @@
             routerDirection="forward"
             (click)="openPage(pages.url)"
           >
+      
             <img [src]="pages.icon" />
-            <!-- <ion-icon [name]="pages.icon" slot="start"></ion-icon> -->
+           
             {{ pages.title }}
+            <div *ngIf="(pages.number)>0">
+              <ion-badge>{{pages.number}}</ion-badge>
+               </div>
           </ion-button>
         </ion-menu-toggle>
       </ion-list>
@@ -41,4 +44,3 @@
   </ion-menu>
   <ion-router-outlet id="content1"></ion-router-outlet>
 </ion-app>
-
