--- a/src/app/moj-nalog/moj-nalog.page.scss
+++ b/src/app/moj-nalog/moj-nalog.page.scss
@@ -11,3 +11,44 @@ ion-content.background{
     font-size: 20px;
     height: 50px; 
   }
+.futter1{
+    width: 95px;
+    border-radius: 2px;
+    background-color: #008CBA;
+    position: left;
+    color: #ffffff;
+    border-radius: 2px;
+    font-size: 20px;
+    height: 50px; 
+}
+.futter2{
+    width: 95px;
+    border-radius: 2px;
+    background-color: #008CBA;
+    position: relative;
+    color: #ffffff;
+    border-radius: 2px;
+    font-size: 20px;
+    height: 50px; 
+}
+.futter3{
+    width: 95px;
+    border-radius: 2px;
+    background-color: #008CBA;
+    position: relative;
+    color: #ffffff;
+    border-radius: 2px;
+    font-size: 20px;
+    height: 50px; 
+}
+
+.futter4{
+    width: 95px;
+    border-radius: 2px;
+    background-color: #008CBA;
+    position: relative;
+    color: #ffffff;
+    border-radius: 2px;
+    font-size: 20px;
+    height: 50px; 
+}
