--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
     <ion-header>
       <ion-toolbar>
         <ion-title style="color: white">
-          <img src="https://img.icons8.com/ios/50/ffffff/menu--v1.png" />
+          <ion-icon name="grid-outline"></ion-icon> Мени
+          
         </ion-title>
         <ion-button
           slot="end"
