moje-rezervacije.service.spec

--- a/src/app/moje-rezervacije/moje-rezervacije.page.html
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.html
@@ -35,8 +35,8 @@
       </ion-col>
       <ion-col class="linija">
           <p class="linija">
-            {{rezervacija.polazak.linija.stanicaPocetna.nazivStanice}}</p>  
-          <p class="linija">{{rezervacija.polazak.linija.stanicaKrajnja.nazivStanice}} </p> 
+            {{rezervacija.polazak.linija.stanicaPocetna.naziv}}</p>  
+          <p class="linija">{{rezervacija.polazak.linija.stanicaKrajnja.naziv}} </p> 
           <p class="linija">({{rezervacija.polazak.linija.tipLinije.naziv}})</p>
       </ion-col>
       <ion-col class="datumPolazak">
