--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -1,17 +1,13 @@
 <ion-header>
-  
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
-      <img src="https://img.icons8.com/clouds/80/ffffff/train.png"/>
+      <img src="https://img.icons8.com/clouds/80/ffffff/train.png" />
     </ion-buttons>
-    <ion-title style="color: #3171e0	; font-size: 25px;">
-      Ред вожње </ion-title>
- 
+    <ion-title style="color: #3171e0; font-size: 25px"> Ред вожње </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content class="background">
-
   <ion-grid>
     <ion-list>
       <ion-item class="pocetnaStanica">
@@ -19,15 +15,16 @@
           <ion-icon name="flag"></ion-icon> Од</ion-label
         >
         <ion-select
-          class="stanicaSelect"
-          [(ngModel)]="stanice1.nazivStanice"
+          class="Stanica"
+          [(ngModel)]="selectedStanica1"
+          name="selectStanica"
           interface="popover"
           placeholder="Изабери станицу"
         >
           <ion-select-option
             *ngFor="let stanica1 of stanice1"
-            [value]="stanica1"
-            >{{stanica1.nazivStanice}}</ion-select-option
+            [value]="stanica1.naziv"
+            >{{stanica1.naziv}}</ion-select-option
           >
         </ion-select>
       </ion-item>
@@ -39,15 +36,16 @@
           <ion-icon name="flag"></ion-icon> До</ion-label
         >
         <ion-select
-          class="stanicaSelect"
-          [(ngModel)]="stanice2.nazivStanice"
+          class="Stanica"
+          [(ngModel)]="selectedStanica2"
+          name="selectStanica"
           interface="popover"
           placeholder="Изабери станицу"
         >
           <ion-select-option
             *ngFor="let stanica2 of stanice2"
-            [value]="stanica2"
-            >{{stanica2.nazivStanice}}</ion-select-option
+            [value]="stanica2.naziv"
+            >{{stanica2.naziv}}</ion-select-option
           >
         </ion-select>
       </ion-item>
@@ -67,105 +65,91 @@
       >
       </ion-datetime>
     </ion-item>
- 
 
-    
-      <ion-button
-        (click)="pretrazi(stanice1.nazivStanice,stanice2.nazivStanice)"
-        type="submit"
-        class="actionbutton"
-        expand="block"
-        fill="clear"
-        style="text-transform: none"
-      >
-      <img src="https://img.icons8.com/clouds/60/000000/search.png"/>
-        Претражи поласке</ion-button
-      >
-      </ion-grid>
-   
+    <ion-button
+      (click)="pretrazi()"
+      type="submit"
+      class="actionbutton"
+      expand="block"
+      fill="clear"
+      style="text-transform: none"
+    >
+      <img src="https://img.icons8.com/clouds/60/000000/search.png" />
+      Претражи поласке</ion-button
+    >
+  </ion-grid>
 
-  
-      <ion-card class="card">
-        <ion-row>
-          <ion-col class="rb"> #</ion-col>
-          <ion-col class="linija">
-            <ion-icon name="train"></ion-icon>
-            Линија</ion-col
-          >
-          <ion-col class="datumPolazak">
-            <ion-icon name="time"></ion-icon>
-            Полазак</ion-col
-          >
-          <ion-col class="datumDolazak">
-            <ion-icon name="time"></ion-icon>
-            Долазак</ion-col
-          >
-        </ion-row>
-      </ion-card>
-      <ion-grid>
-        <ion-card *ngFor="let polazak of polasci; let i=index">
-          <ion-row>
-            <ion-col class="rb"> {{polazak.polazakID}} </ion-col>
-            <ion-col class="linija">
-              <p class="linija">
-                {{polazak.linija.stanicaPocetna.nazivStanice}}
-                {{polazak.linija.stanicaKrajnja.nazivStanice}}
-                ({{polazak.linija.tipLinije.naziv}})
-              </p>
-            </ion-col>
-            <ion-col class="datumPolazak">
-              <p class="datumPolazak">
-                {{polazak.datumPolaska | date: 'dd/MM/yyyy HH:mm'}}
-              </p>
-            </ion-col>
-            <ion-col class="datumDolazak">
-              <p class="datumDolazak">
-                {{polazak.datumDolaska | date: 'dd/MM/yyyy HH:mm'}}
-              </p>
-            </ion-col>
-          </ion-row>
-          <ion-button
-            class="vratiMedjustanice"
-            (click)="vratiMedjustaniceZaPolazak(polazak.linija.linijaID,polazak.linija.stanicaPocetna.nazivStanice,polazak.linija.stanicaKrajnja.nazivStanice)"
-            >Међустанице
-            <ion-icon name="train"></ion-icon>
-          </ion-button>
-          <ion-button
-            class="rezervisi"
-            (click)="rezervisiKartu(polazak.polazakID,polazak.datumPolaska)"
-            >Резервиши
-            <ion-icon name="checkbox"></ion-icon>
-          </ion-button>
-        </ion-card>
-      </ion-grid>
+  <ion-card class="card">
+    <ion-row>
+      <ion-col class="rb"> #</ion-col>
+      <ion-col class="linija">
+        <ion-icon name="train"></ion-icon>
+        Линија</ion-col
+      >
+      <ion-col class="datumPolazak">
+        <ion-icon name="time"></ion-icon>
+        Полазак</ion-col
+      >
+      <ion-col class="datumDolazak">
+        <ion-icon name="time"></ion-icon>
+        Долазак</ion-col
+      >
+    </ion-row>
+  </ion-card>
+
+  <ion-card *ngFor="let polazak of polasci; let i=index">
+    <ion-row>
+      <ion-col class="rb"> {{polazak.polazakID}} </ion-col>
+      <ion-col class="linija">
+        <p class="linija">
+          {{polazak.linija.stanicaPocetna.naziv}}
+          {{polazak.linija.stanicaKrajnja.naziv}}
+          ({{polazak.linija.tipLinije.naziv}})
+        </p>
+      </ion-col>
+      <ion-col class="datumPolazak">
+        <p class="datumPolazak">
+          {{polazak.datumPolaska | date: 'dd/MM/yyyy HH:mm'}}
+        </p>
+      </ion-col>
+      <ion-col class="datumDolazak">
+        <p class="datumDolazak">
+          {{polazak.datumDolaska | date: 'dd/MM/yyyy HH:mm'}}
+        </p>
+      </ion-col>
+    </ion-row>
+    <ion-button
+      class="vratiMedjustanice"
+      (click)="vratiMedjustaniceZaPolazak(polazak.linija.linijaID,polazak.linija.stanicaPocetna.naziv,polazak.linija.stanicaKrajnja.naziv)"
+      >Међустанице
+      <ion-icon name="train"></ion-icon>
+    </ion-button>
+    <ion-button
+      class="rezervisi"
+      (click)="rezervisiKartu(polazak.polazakID,polazak.datumPolaska)"
+      >Резервиши
+      <ion-icon name="checkbox"></ion-icon>
+    </ion-button>
+  </ion-card>
 </ion-content>
 <ion-footer class="footer">
-  
   <ion-toolbar>
     <ion-tabs>
       <ion-tab-bar slot="bottom">
         <ion-tab-button tab="schedule">
           <ion-icon name="caret-back-outline"></ion-icon>
-       
+
           <!-- <ion-badge></ion-badge> -->
         </ion-tab-button>
-    
-  
-    
+
         <ion-tab-button tab="map">
           <ion-icon name="ellipse-outline"></ion-icon>
-        
         </ion-tab-button>
-    
+
         <ion-tab-button tab="about">
           <ion-icon name="square-outline"></ion-icon>
-      
         </ion-tab-button>
       </ion-tab-bar>
     </ion-tabs>
-   </ion-toolbar>
+  </ion-toolbar>
 </ion-footer>
-
-
-
-
