--- a/src/app/moje-rezervacije/moje-rezervacije.page.scss
+++ b/src/app/moje-rezervacije/moje-rezervacije.page.scss
@@ -6,13 +6,13 @@ ion-content.background{
     min-width: 30px;
     text-align: right;
 }
-.linija.kol{
-    min-width: 90px;
-    max-width: 90px;
-    text-align: right;
-}
-.linija{
-    min-width: 90px;
-    max-width: 90px;
-    text-align: left;
-}
+// .linija.kol{
+//     min-width: 90px;
+//     max-width: 90px;
+//     text-align: right;
+// }
+// .linija{
+//     min-width: 90px;
+//     max-width: 90px;
+//     text-align: left;
+// }
